feat: add store commen in docs
