# app/Http/Controllers/CommentControllers/StoreController.php
@@ -9,9 +9,70 @@ use Illuminate\Http\JsonResponse;
 class StoreController extends BaseCommentController
 {
     /**
-     * Store new commen.
+     * @OA\Post(
+     *      path="/api/comment",
+     *      operationId="commentStore",
+     *      tags={"Projects"},
+     *      summary="Store",
+     *      description="Store new comment.",
+     *      @OA\Parameter(
+     *          name="Authorization",
+     *          description="Authorization token",
+     *          required=true,
+     *          in="header",
+     *          @OA\Schema(
+     *              type="string",
+     *              example="Bearer 67pIVg4vAbmRZewXK4H0llU4XQtSy3VIxTpofgUOFfpcTfXfK1U0tSM3YNhytEw7BA7KzePrRJoQs3KlQSpzCer10lObTrep8wuZ"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="text",
+     *          description="text of comment",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string",
+     *              example="long text ...",
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="user_id",
+     *          description="user id",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer",
+     *              example=1,
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="parent_id",
+     *          description="parent comment id",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer",
+     *              example=1,
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Ok",
+     *          @OA\JsonContent(ref="#/components/schemas/StoreCommentResourceTrue")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *          @OA\JsonContent(ref="#/components/schemas/LoginResourceFalse")
+     *      ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Content",
+     *          @OA\JsonContent(ref="#/components/schemas/StoreCommentResourceErrorValidation")
+     *      )
+     *     )
      *
-     * @return \Illuminate\Http\JsonResponse
+     *  @return \Illuminate\Http\JsonResponse
      */
     public function __invoke(CommentFormRequest $request): JsonResponse
     {
